--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
-    <link rel="stylesheet" type="text/css" href=""
+    <title>NPM testing</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>Javascript in HTML</h1>
-    <script type="text/javascript" src="script.js"></script>
+    <h1>NPM testing</h1>
 </body>
 </html>
